--- a/options/locale/locale_en-US.ini
+++ b/options/locale/locale_en-US.ini
@@ -336,7 +336,7 @@ admin_name = Administrator Username
 admin_password = Password
 confirm_password = Confirm Password
 admin_email = Email Address
-install_btn_confirm = Install Gitea
+install_btn_confirm = Install GitVault
 test_git_failed = Could not test 'git' command: %v
 sqlite3_not_available = This Gitea version does not support SQLite3. Please download the official binary version from %s (not the 'gobuild' version).
 invalid_db_setting = The database settings are invalid: %v
